--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -20,8 +20,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
@@ -139,6 +139,16 @@
     <dependency>
     	<groupId>net.stevemul.proxy</groupId>
     	<artifactId>traffic-output-module</artifactId>
+    	<version>1.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>net.stevemul.proxy</groupId>
+    	<artifactId>traffic-rewrite-module</artifactId>
+    	<version>1.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>net.stevemul.proxy</groupId>
+    	<artifactId>auto-proxy-module</artifactId>
     	<version>1.0</version>
     </dependency>
   </dependencies>
