Making socket io port configurable.

--- a/controller/src/main/resources/applicationResources.properties
+++ b/controller/src/main/resources/applicationResources.properties
@@ -6,3 +6,5 @@ error.invalidPort=''{0}'' must specify a valid port number.
 error.invalidProxyHost=''{0}'' must specify a valid proxy host.
 error.invalidProxyPort=''{0}'' must specify a valid proxy port.
 warn.socketIo.start=Unable to start server.
+error.invalidSocketIOPort=''{0}'' must specific a valid socket io port.
+error.invalidHostname='{0}'' must specific a valid hostname.
