Added run script for convenience.

--- a/controller/src/main/resources/applicationResources.properties
+++ b/controller/src/main/resources/applicationResources.properties
@@ -8,3 +8,12 @@ error.invalidProxyPort=''{0}'' must specify a valid proxy port.
 warn.socketIo.start=Unable to start server.
 error.invalidSocketIOPort=''{0}'' must specific a valid socket io port.
 error.invalidHostname='{0}'' must specific a valid hostname.
+
+info.help=Prints this message.
+info.mitm=Specify this option to enable man in the middle, to intercept requests over https (you will have to accept the auto generated certificate).
+info.listenPort=Set this to specify a different port for the proxy to listen on. Default is 9090.
+info.proxyHost=If you're using a proxy normally e.g. in a corporate network, use this param to specify the host for that proxy server.
+info.proxyPort=If you're using a proxy normally e.g. in a corporate network, use this param to specify the port for that proxy server.
+info.blindTrust=Specify this if you want to intercept traffic to a host where its SSL certificate is not valid.
+info.socketIOPort=Set this to change the port that the Socket IO Server is on.
+info.hostname=Set this to change the the host that the Socket IO client connects to (If you were running the proxy on a remove host for example).
