Allowing connections from external clients.

--- a/controller/src/main/resources/applicationResources.properties
+++ b/controller/src/main/resources/applicationResources.properties
@@ -17,3 +17,4 @@ info.proxyPort=If you're using a proxy normally e.g. in a corporate network, use
 info.blindTrust=Specify this if you want to intercept traffic to a host where its SSL certificate is not valid.
 info.socketIOPort=Set this to change the port that the Socket IO Server is on.
 info.hostname=Set this to change the the host that the Socket IO client connects to (If you were running the proxy on a remove host for example).
+info.allowExternal=Specify to to allow connections from external clients.
