Added option to specify path prefixes to be served from local folder.

--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -151,5 +151,10 @@
     	<artifactId>auto-proxy-module</artifactId>
     	<version>1.0</version>
     </dependency>
+    <dependency>
+    	<groupId>net.stevemul.proxy</groupId>
+    	<artifactId>static-resources-module</artifactId>
+    	<version>1.0</version>
+    </dependency>
   </dependencies>
 </project>
