--- a/core/src/main/resources/MimeTypes.properties
+++ b/core/src/main/resources/MimeTypes.properties
@@ -1,6 +1,6 @@
 css=text/css
 html=text/html
-js=application/javascript
+js=text/javascript; charset=UTF-8
 png=image/png
 eot=application/vnd.ms-fontobject
 svg=image/svg+xml
