--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -143,7 +143,7 @@
     </dependency>
     <dependency>
     	<groupId>net.stevemul.proxy</groupId>
-    	<artifactId>traffic-rewrite-module</artifactId>
+    	<artifactId>occ-module</artifactId>
     	<version>1.0</version>
     </dependency>
     <dependency>
